--- a/style.css
+++ b/style.css
@@ -252,6 +252,8 @@ li a:hover {
   position: relative;
   /* border: 10px solid black; */
   box-shadow: 1px 2px 10px 5px white ;
+width:340px;
+border-radius: 7px;
   /* border-radius: 30px; */
 }
 
