--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ li a:hover {
   /* background-size: 100% 100%; */
   box-shadow: 1px 2px 10px 5px white ;
   animation:slider 40s infinite ;
-  border-radius: 30px;
+  border-radius: 30x;
   background-size: cover;
   background-repeat: no-repeat;
    background-size: 80% 100%; 
@@ -159,8 +159,6 @@ li a:hover {
 
 
 @keyframes slider{
-
-    
     5%{background-image: url("p5.jpeg");background-size:100% 100%;background-color: black;}
     10%{background-image: url("p6.jpeg");background-size:100% 100%;background-color: black;}
     15%{background-image: url("p8.jpeg");background-size:100% 100%;background-color: black;}
@@ -170,7 +168,6 @@ li a:hover {
     35%{background-image: url("p15.jpeg");background-size:100% 100%;background-color: black;}
   40%{background-image: url("p18.jpeg");background-size:100% 100%;background-color: black;}
   45%{background-image: url("p9.jpeg");background-size:90% 100%;background-color: black;}
-
     50%{background-image: url("p12.jpeg");background-size:90% 100%;background-color: black;}
     55%{background-image: url("p22.jpeg");background-size:80% 100%;background-color: black;}
   60%{background-image: url("p7.jpeg");background-size:70% 100%;background-color: black;}
@@ -213,6 +210,7 @@ li a:hover {
   width:100%;
   height:700;
   margin-top: 500px;
+
   /* padding:10px */
 
   /* display: inline-block; */
@@ -238,6 +236,7 @@ li a:hover {
   width:100%;
   height:700;
   margin-top: 1000px;
+
   /* padding:10px */
 
   /* display: inline-block; */
@@ -285,7 +284,16 @@ span{
 .headline{
   text-align: left;
   font-family:cursive; font-size: 30px;
-  margin-left: 10%
+  margin-left: 10%;
+}
+
+.followHeadLine{
+  text-align: center;
+  font-family:cursive; font-size: 30px;
+  margin-left: 30%;
+  margin-bottom: 0;
+  line-height: 25px;
+  border-bottom:4px solid chocolate;
 }
 h2{
   color: #BE853E;
@@ -373,8 +381,8 @@ h2{
         }
 
         #Message{
-            border: 5px solid chocolate;
-            border-radius: 3px;
+            border: 5px solid rgb(138, 72, 25);;
+            border-radius: 7px;
         }
         .que{
           width: 80%;
@@ -389,6 +397,24 @@ h2{
           height: 2em;
 
 
+
       }
+
+      .youtube{
+        box-shadow: 1px 2px 10px 5px chocolate ;
+        border-radius: 10px;
+      }
+
+      .qrCode{
+        border:2px solid chocolate;
+      }
+
+      .Subject{
+        border: 2px solid rgb(138, 72, 25);
+        height: 22px;
+        width: 150px;
+        border-radius: 5px;
+      }
+
 
     
