--- a/style.css
+++ b/style.css
@@ -302,13 +302,6 @@ h2{
 }
 
 
-/* h1 {
-  position: relative;
-  font-size: 30px;
-  z-index: 1;
-   overflow: hidden;
-  text-align: center;
-  }  */
   h1:before, h1:after {
   position: absolute;
   top: 51%;
@@ -417,4 +410,70 @@ h2{
       }
 
 
+      .wrapper {
+        display: flex;
+        width: 100%;
+    }
     
+    .sidebar {
+        /* width: 100px; */
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100%;
+        z-index: 999;
+        background:rgb(231, 198, 173);
+         /* rgb(131, 83, 28); */
+        color: #fff;
+        transition: all 0.3s;
+        align-items: center;
+        margin-left: 0;
+        width: 9%;
+        max-width: 100px;
+        border-left: 2px solid chocolate;
+        border-right: 2px solid chocolate;
+        
+        background-image: url("backback.jpg");
+
+       
+
+      
+
+    }
+
+    .side
+    {
+      margin-left: 0;
+      float: left;
+      font-family: cursive;
+      font-size: 100%;
+      border: 2px solid bisque;
+      background-color: rgb(185, 126, 66);
+      width: 80%;
+      height: 60px;
+      margin:0 0 0 0;
+      text-align: left;
+      /* border-radius: 20px; */
+      /* padding: 2px; */
+      max-width: 100px;
+      max-height: 6%;
+      padding: 0;
+      margin-top: 2px;
+
+    }
+
+    .sideHead{
+      font-size:15px;
+      max-width: 100%;
+      font-family: cursive;
+      color: rgb(185, 126, 66);
+      margin:0 0 0 0;
+   
+    }
+
+    .dogimg{
+      margin-top: 300px;
+      height:20%;
+
+      width: 100%;
+    }
