--- a/style.css
+++ b/style.css
@@ -10,8 +10,9 @@ body{
   padding: 20px;
   max-width: 900px;
   width:90%;
-/*   margin: 0 auto; */
   margin-left:24%;
+  
+  /* margin: 0 auto; */
 
   text-align: left;
   font: normal 400 12px 'Open Sans', Helvetica, Arial, sans-serif;
@@ -414,6 +415,7 @@ h2{
       .wrapper {
         display: flex;
         width: 100%;
+        margin-right: 100px;
     }
     
     .sidebar {
@@ -432,7 +434,7 @@ h2{
         width: 9%;
         max-width: 100px;
         border-left: 2px solid chocolate;
-/*         border-right: 2px solid chocolate; */
+        border-right: 2px solid chocolate;
         
         background-image: url("backback.jpg");
 
@@ -449,7 +451,8 @@ h2{
       font-family: cursive;
       font-size: 100%;
       border: 2px solid bisque;
-      background-color: rgb(185, 126, 66);
+      background-color:white;
+       /* rgb(185, 126, 66); */
       width: 80%;
       height: 60px;
       margin:0 0 0 0;
@@ -475,6 +478,7 @@ h2{
     .dogimg{
       margin-top: 300px;
       height:20%;
-
       width: 100%;
     }
+
+   
