--- a/style.css
+++ b/style.css
@@ -420,7 +420,7 @@ h2{
     
     .sidebar {
         /* width: 100px; */
-        position: relative;
+        position: sticky;
         top: 0;
         left: 0;
         height: 100%;
