--- a/style.css
+++ b/style.css
@@ -32,10 +32,10 @@ body{
 
 .menuBar ul li{
     width :120px;
-    margin:10px;
+    margin:4px;
     margin-bottom: 5px;
     margin-top: 5px;
-    padding :15px;
+    padding :5px;
     background-color: rgb(170, 27, 63, 0.8);
     border-radius: 3px;
     /* border: brown solid 3px; */
@@ -56,7 +56,7 @@ body{
     color: rgb(192, 192, 192);
 
     font-family: 'BN Begilophim';
-     font-size: 20px;
+     font-size: 15px;
 }
 
 .sub-menu{
@@ -311,7 +311,7 @@ iframe{
   .facebook{
     margin: 30px;
     /* padding: 80px; */
-  margin-right: 100px;
+  margin-right: 10%;
     position: relative;
     /* border: 10px solid black; */
     box-shadow: 1px 2px 10px 5px white ;
